feat(llecoop): #289 add filtering option to llecoop categories list table
ISSUES CLOSED: #289

--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -59,5 +59,8 @@
     /* Table */
     --plastik-mdc-table-row-min-height: 40px;
     --plastik-mdc-table-row-max-height: 160px;
+
+    /* Form */
+    --mat-form-field-container-text-line-height: 1.5;
   }
 }
