feat(llecoop/product/list): #288 add llecoop products list view
ISSUES CLOSED: #288

--- a/libs/shared/layouts/feature/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/shared/layouts/feature/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -5,7 +5,7 @@
 
 <plastik-shared-form-feature
   class="flex flex-row items-end content-center justify-between filters-box"
-  [fields]="facade.formStructure() || []"
+  [fields]="facade.formStructure?.() || []"
   [model]="{ text: '' }"
   [submitAvailable]="false"
   (changeEvent)="onChangeFiltering($event)">
