feat(llecoop): #306 add login to llecoop app
ISSUES CLOSED: #306

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -136,7 +136,7 @@
 
 <ng-template #headerMenu>
   <button mat-button aria-label="header menu" [matMenuTriggerFor]="menu">
-    <span>Carlos Matheu</span>
+    <span>{{ headerConfig.menu?.label | ngrxPush }}</span>
     <mat-icon class="w-[30px] h-[30px] text-[30px]">account_circle</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
@@ -146,8 +146,8 @@
           <mat-icon>{{ item.icon }}</mat-icon>
           <span>{{ item.title }}</span>
         </button>
-      } @else {
-        <button type="button" mat-menu-item (click)="onSendAction(item.name)">
+      } @else if (item && item.action) {
+        <button type="button" mat-menu-item (click)="onSendAction(item.action)">
           <mat-icon>{{ item.icon }}</mat-icon>
           <span>{{ item.title }}</span>
         </button>
