--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -14,17 +14,16 @@
     (modelChange)="onModelChange($event)"></formly-form>
 
   <!-- buttons -->
-  <div class="mt-6 max-height-flex">
-    @if (submitAvailable) {
-      <button
-        mat-flat-button
-        color="primary"
-        type="submit"
-        class="h-[56px] w-[150px]"
-        data-test="submit-button"
-        [disabled]="!form.valid">
-        Submit
-      </button>
-    }
-  </div>
+  @if (submitAvailable) {
+    <button
+      mat-flat-button
+      color="primary"
+      type="submit"
+      class="h-[56px] w-[150px]"
+      data-test="submit-button"
+      [ngClass]="submitConfig?.buttonStyle || ''"
+      [disabled]="!form.valid">
+      {{ submitConfig?.label || 'Submit' }}
+    </button>
+  }
 </form>
