--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -1,7 +1,12 @@
-<h2 class="flex items-center content-center gap-sub">
-  <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
-  <span>{{ facade.viewConfig().title | titlecase }}</span>
-</h2>
+<div class="flex flex-wrap items-center justify-center md:justify-between gap-sub">
+  <h2 class="flex items-center content-center gap-sub">
+    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
+    <span>{{ facade.viewConfig().title | titlecase }}</span>
+  </h2>
+  <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['./nova']">
+    <mat-icon>add</mat-icon> Afegir
+  </button>
+</div>
 
 <plastik-shared-form-feature
   class="flex flex-row items-end content-center justify-between filters-box"
