feat(llecoop/product/detail): #310 add new product view
ISSUES CLOSED: #310

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -3,7 +3,12 @@
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
     <span>{{ facade.viewConfig().title | titlecase }}</span>
   </h2>
-  <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['./nova']">
+  <button
+    type="button"
+    mat-flat-button
+    color="accent"
+    class="text-white"
+    [routerLink]="['./crear']">
     <mat-icon>add</mat-icon> Afegir
   </button>
 </div>
