feat(llecoop/product/list): #312 add extra columns to products list table

--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -49,8 +49,8 @@
         'paginator--hide': paginationVisibility?.hideRangeLabel,
         'paginator--hide-range-buttons': paginationVisibility?.hideRangeButtons,
       }"
-      [pageIndex]="pagination?.pageIndex"
-      [pageSize]="pagination?.pageSize"
+      [pageIndex]="pagination?.pageIndex || 0"
+      [pageSize]="pagination?.pageSize || resultsLength"
       [pageSizeOptions]="pageSizeOptions"
       [showFirstLastButtons]="!paginationVisibility?.hidePaginationFirstLastButtons"
       (page)="onChangePagination($event)">
