--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.scss
@@ -14,7 +14,7 @@
     white-space: nowrap;
 
     > .mat-sort-header-container {
-      white-space: pre-wrap;
+      white-space: pre-line;
       word-break: normal;
       min-width: 5rem;
     }
