--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
@@ -1,20 +1,21 @@
-<mat-form-field class="w-full">
-  <mat-label>{{ to.label }}</mat-label>
-  <input
-    matInput
-    [type]="hiddenPass() ? 'password' : 'text'"
-    [formControl]="formControl"
-    [formlyAttributes]="field"
-    [required]="to.required || false"
-    [maxLength]="to.maxLength"
-    [minLength]="to.minLength"
-    [autocomplete]="to['autocomplete']" />
-  <button
-    mat-icon-button
-    matSuffix
-    [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
-    [attr.aria-pressed]="hiddenPass()"
-    (click)="hidePassword()">
-    <mat-icon>{{ hiddenPass() ? 'visibility_off' : 'visibility' }}</mat-icon>
-  </button>
-</mat-form-field>
+<input
+  matInput
+  class="w-[90%]"
+  [type]="hiddenPass() ? 'password' : 'text'"
+  [formControl]="formControl"
+  [formlyAttributes]="field"
+  [required]="to.required || false"
+  [maxLength]="to.maxLength"
+  [minLength]="to.minLength"
+  [autocomplete]="to['autocomplete']"
+/>
+<button
+  mat-icon-button
+  matSuffix
+  class="absolute top-0 right-0"
+  [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
+  [attr.aria-pressed]="hiddenPass()"
+  (click)="hidePassword()"
+>
+  <mat-icon>{{ hiddenPass() ? 'visibility_off' : 'visibility' }}</mat-icon>
+</button>
