--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
@@ -7,15 +7,13 @@
   [required]="to.required || false"
   [maxLength]="to.maxLength"
   [minLength]="to.minLength"
-  [autocomplete]="to['autocomplete']"
-/>
+  [autocomplete]="to['autocomplete']" />
 <button
   mat-icon-button
   matSuffix
   class="absolute top-0 right-0"
   [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
   [attr.aria-pressed]="hiddenPass()"
-  (click)="hidePassword()"
->
+  (click)="hidePassword()">
   <mat-icon>{{ hiddenPass() ? 'visibility_off' : 'visibility' }}</mat-icon>
 </button>
