feat(llecoop/category/detail): #317 add category update
ISSUES CLOSED: #317

--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -11,6 +11,6 @@
 <plastik-shared-form-feature
   class="block w-full lg:w-1/2"
   [fields]="facade.formStructure() || []"
-  [model]="{}"
+  [model]="facade.model?.() || {}"
   (changeEvent)="onSubmit($event)">
 </plastik-shared-form-feature>
