--- a/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker/input-color-picker-type.component.html
+++ b/libs/shared/form/ui/input-color-picker/src/lib/input-color-picker/input-color-picker-type.component.html
@@ -6,5 +6,8 @@
     [acceptLabel]="to.acceptLabel || 'Accept'"
     [cancelLabel]="to.cancelLabel || 'Cancel'"
     [formControl]="formControl"
-    [format]="'hex'"></ngx-colors>
+    [format]="'hex'"
+    [hideColorPicker]="to.hideColorPicker || false"
+    [hideTextInput]="to.hideTextInput || false"
+    [palette]="to.colorPalette"></ngx-colors>
 </div>
