--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
@@ -10,10 +10,12 @@
   [autocomplete]="to['autocomplete']" />
 <button
   mat-icon-button
+  tabindex="-1"
+  type="button"
   matSuffix
   class="absolute top-0 right-0"
   [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
   [attr.aria-pressed]="hiddenPass()"
-  (click)="hidePassword()">
+  (click)="hidePassword($event)">
   <mat-icon>{{ hiddenPass() ? 'visibility_off' : 'visibility' }}</mat-icon>
 </button>
