feat(llecoop/product/detail): #319 add product update
ISSUES CLOSED: #319

--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -1,5 +1,6 @@
-<div class="flex flex-wrap items-center justify-center md:justify-between gap-sub">
-  <h2 class="flex items-center content-center gap-sub">
+<div
+  class="flex flex-col gap-sm flex-wrap items-center justify-center md:flex-row md:justify-between">
+  <h2 class="flex items-center content-center h4 gap-sub">
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
     <span>{{ facade.viewConfig().title | titlecase }}</span>
   </h2>
