--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -83,7 +83,7 @@
       <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
       <mat-row
         *matRowDef="let row; columns: displayedColumns"
-        class="even:bg-gray-5/20 odd:bg-white"></mat-row>
+        class="even:bg-gray-5 odd:bg-white"></mat-row>
     </mat-table>
 
     <mat-paginator
