--- a/libs/shared/form/feature/src/lib/shared-form-feature.component.html
+++ b/libs/shared/form/feature/src/lib/shared-form-feature.component.html
@@ -1,6 +1,6 @@
 <form
   novalidate
-  class="flex flex-col flex-wrap justify-start w-full gap-0 lg:gap-lg my-md"
+  class="flex flex-col flex-wrap justify-start w-full gap-sm lg:gap-lg my-md"
   [formGroup]="form"
   (ngSubmit)="onSubmit($event)">
   <!-- form -->
