--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -32,5 +32,6 @@
   [paginationVisibility]="facade.tableStructure().paginationVisibility"
   [filterCriteria]="filterCriteria()"
   [actions]="facade.tableStructure().actions || {}"
-  (changeSorting)="onChangeSorting($event)">
+  (changeSorting)="onChangeSorting($event)"
+  (delete)="onDelete($event)">
 </plastik-shared-table>
