feat(llecoop/product/list): #330 add action button to products list to turn on/off availability
ISSUES CLOSED: #330

--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -59,6 +59,7 @@
     /* Table */
     --plastik-mdc-table-row-min-height: 40px;
     --plastik-mdc-table-row-max-height: 160px;
+    --plastik-mdc-table-row-marked-bg-color: var(--warn-50);
 
     /* Form */
     --mat-form-field-container-text-line-height: 2.4;
