--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -32,6 +32,7 @@
   [paginationVisibility]="facade.tableStructure().paginationVisibility"
   [filterCriteria]="filterCriteria()"
   [actions]="facade.tableStructure().actions || {}"
+  [extraRowStyles]="facade.tableStructure().extraRowStyles"
   (changeSorting)="onChangeSorting($event)"
   (delete)="onDelete($event)">
 </plastik-shared-table>
